# stelline

./: .env.example  CLAUDE.md  Cargo.toml  docker-compose.yml
crates/admin/: Cargo.toml
crates/admin/src/: dashboard.html  lib.rs
crates/auth-server/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/game-data/: Cargo.toml
crates/game-data/src/: lib.rs
crates/game-server/: Cargo.toml
crates/game-server/src/: lib.rs  main.rs
crates/game-server/tests/: e2e_test.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: character_store.rs  lib.rs
crates/gateway/tests/: gateway_test.rs
crates/login-server/: Cargo.toml
crates/login-server/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/services/: Cargo.toml
crates/test-client/: Cargo.toml
crates/test-client/src/: main.rs
crates/tui-client/: Cargo.toml
crates/tui-client/src/: app.rs  command.rs  main.rs  network.rs  script.rs
crates/tui-client/src/tui/: layout.rs  mod.rs
crates/tui-client/src/tui/widgets/: character_create.rs  character_select.rs  entity_list.rs  help.rs  log.rs  mod.rs  stats.rs  world_map.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
data/: world.toml
migrations/: 001_accounts.sql  002_characters.sql
