[workspace]
members = [
    "crates/common",
    "crates/protocol",
    "crates/gateway",
    "crates/world",
    "crates/admin",
    "crates/services",
    "crates/game-data",
    "crates/login-server",
    "crates/game-server",
    "crates/test-client",
    "crates/tui-client",
]
resolver = "2"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Web (admin)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Spatial / ECS
hecs = "0.10"

# Config
toml = "0.8"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"

# Env
dotenvy = "0.15"

# Testing
tokio-test = "0.4"
tempfile = "3"
