[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
axum-test = "14"
tokio-tungstenite = "0.24"
futures-util = "0.3"
