[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_server"
path = "src/lib.rs"

[[bin]]
name = "game-server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }
world = { path = "../world" }
gateway = { path = "../gateway" }
admin = { path = "../admin" }
services = { path = "../services" }
game-data = { path = "../game-data" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
# Integration tests need direct access to these crates' types.
protocol = { path = "../protocol" }
world = { path = "../world" }
gateway = { path = "../gateway" }
admin = { path = "../admin" }
game-data = { path = "../game-data" }
common = { path = "../common" }
