[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
