[package]
name = "login-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "login-server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tokio-util = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
