[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
