[package]
name = "tui-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tui-client"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }
gateway = { path = "../gateway" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.11", features = ["json"] }
