[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }
hecs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
